UI: Fix the vertical alignment of the homepage features

--- a/src/css/landing-page.css
+++ b/src/css/landing-page.css
@@ -4,6 +4,10 @@
   background-color: var(--background-color-darkest);
 }
 
+.heroBanner {
+  padding: 0;
+}
+
 .feature-card {
   background-color: var(--background-color-dark);
   height: 100%;
