--- a/src/pages/index.module.css
+++ b/src/pages/index.module.css
@@ -3,17 +3,11 @@
  * and scoped locally.
  */
 
-.heroBanner {
-  padding: 4rem 0;
+header.heroBanner {
+  padding: 2rem 0;
   text-align: center;
   position: relative;
   overflow: hidden;
-}
-
-@media screen and (max-width: 996px) {
-  .heroBanner {
-    padding: 2rem;
-  }
 }
 
 .buttons {
